tests/invalid/test_035.wyal
type Point1D is ({int x} p)
type OpenPoint is ({int x,int y, ...} p)

assert:
    forall(Point1D p, OpenPoint q):
        if:
            p.x == q.x
        then:
            p == q